# zkdex-sdk

./: .gitignore  Cargo.toml  Makefile  README.md  build_binaryen.sh
.github/workflows/: CI.yml  common-tasks.yml  dynamic-library-CI.yml  java-sdk-CI.yml  java-sdk.yml  js-sdk-generator.yml  js-sdk.yml  pre-release.yml  python-sdk-CI.yml  python-sdk.yml  release.yml
java-sdk/: README.md  pom.xml
java-sdk/src/main/java/com/okx/: ComposeHash.java  ComposeSig.java  EthAddressSignature.java  Publickey.java  RustJNI.java  Signature.java  ZKDEX.java  ZKDEXBenchmark.java
java-sdk/src/main/resources/com/okx/: arm_libzkdex_sdk.dylib  arm_libzkdex_sdk_0.1.3.dylib  libzkdex_sdk_aarch64_0.1.3.dylib  libzkdex_sdk_aarch64_0.1.4.dylib  libzkdex_sdk_x86_64_0.1.3.dylib  libzkdex_sdk_x86_64_0.1.4.dylib  x86_64_libzkdex_sdk.dylib  x86_64_libzkdex_sdk_0.1.1.dylib  x86_64_libzkdex_sdk_0.1.3.dylib
java-sdk/src/main/resources/com/okx/aarch64_mac/: libzkdex_sdk_aarch64_0.1.3.dylib
java-sdk/src/main/resources/com/okx/x86_64_mac/: libzkdex_sdk_x86_64_.dylib
java-sdk/src/test/java/com/okx/: ZKDEXTest.java
javascript-sdk/: README.md  build.sh  package-lock.json  package.json
javascript-sdk/js-example/: package-lock.json
js-example/: benchmark.js  index.html  index.js  package-lock.json  package.json
js-example/test/: test.js
ok_zksync_crypto/: Cargo.toml
ok_zksync_crypto/src/: error.rs  lib.rs  params.rs  primitives.rs  proof.rs  serialization.rs
ok_zksync_crypto/src/circuit/: funding.rs  mod.rs  oracle.rs  order.rs  utils.rs
ok_zksync_crypto/src/merkle_tree/: mod.rs  parallel_smt.rs  rescue_hasher.rs  storage.rs  tests.rs
python-sdk/: Cargo.toml  README.md  pyproject.toml  rust-toolchain
python-sdk/.env/: pyvenv.cfg
python-sdk/src/: lib.rs  model.rs
python-sdk/tests/: test.py
rust-sdk/: .gitignore  Cargo.toml  build.rs  build.sh  package.json  pre-build.sh  rust-toolchain  web-wasm.js
rust-sdk/src/: common.rs  constant.rs  convert.rs  fr.rs  hash.rs  helper.rs  java_bridge.rs  javascript_bridge.rs  lib.rs  new_public_key.rs  serde_utils.rs  types.rs  utils.rs
rust-sdk/src/crypto/: convert.rs  mod.rs  packed_public_key.rs  packed_signature.rs  public_key_type.rs  sign.rs
rust-sdk/src/perpetual/: mod.rs  types.rs
rust-sdk/src/perpetual/transaction/: limit_order.rs  liquidate.rs  mod.rs  oracle_price.rs  transfer.rs  withdraw.rs
rust-sdk/src/perpetual/types/: asset_id.rs
rust-sdk/src/serde_wrapper/: felt.rs  hash_type.rs  i128_serde.rs  integer.rs  mod.rs  serde_utils.rs  std_duration_serde.rs  transfer.rs  u128_serde.rs  u256_serde.rs  u32_serde.rs  u64_serde.rs  u8_array_serde.rs  vec_signed_asset_id.rs
rust-sdk/src/spot/: mod.rs  types.rs
rust-sdk/src/spot/order/: limit_order.rs  mod.rs
rust-sdk/src/spot/transactions/: limit_order.rs  mod.rs  transfer.rs  withdrawal.rs
rust-sdk/src/spot/types/: amount.rs  asset_id.rs  position_id.rs  signed_amount.rs
rust-sdk/src/transaction/: limit_order.rs  liquidate.rs  mod.rs  oracle_price.rs  transfer.rs  types.rs  withdraw.rs
rust-sdk/src/tx/: convert.rs  mod.rs  packed_public_key.rs  packed_signature.rs  public_key_type.rs  sign.rs
rust-sdk/src/types/: amount.rs  asset_id.rs  position_id.rs
rust-sdk/src/unified/: mod.rs  state.rs  transactions.rs  types.rs
rust-sdk/src/unified/transactions/: hash_trait.rs  liquidate.rs  oracle.rs  order.rs  perpetual_trade.rs  sign_trait.rs  spot_trade.rs  transfer.rs  withdrawal.rs
rust-sdk/src/unified/transactions/order/: limit_order.rs
rust-sdk/src/unified/transactions/order/limit_order/: perpetual.rs  spot.rs
rust-sdk/src/unified/types/: asset_id.rs  chain_id.rs  macros.rs  position_id.rs  signed_amount.rs
rust-sdk/src/zkw/: mod.rs  poseidon.rs
scripts/: check_env.sh
scripts/actions/: install_cuda_windows.ps1
types/: Cargo.toml
types/src/: const_value.rs
types/src/common/: defined_types.rs  mod.rs  packed_public_key.rs  params.rs
zksync-crypto/: Cargo.toml  build.sh
zksync-crypto/src/: byte_tools.rs  common.rs  constant.rs  convert.rs  env_tools.rs  fr.rs  hash.rs  hash_lib.rs  lib.rs  limit_order.rs  new_public_key.rs  transfer.rs  types.rs  utils.rs  withdraw.rs
zksync-crypto/src/serde_wrapper/: bigint_serde.rs  i64_serde.rs  mod.rs  offset_date_time_serde.rs  other_serde.rs  signature_serde.rs  u256_serde.rs  u64_serde.rs
zksync-crypto/src/transaction/: limit_order.rs  mod.rs  withdraw.rs
zksync-crypto/src/tx/: convert.rs  packed_public_key.rs  packed_signature.rs  sign.rs
zksync-crypto/src/zkw/: mod.rs  poseidon.rs
