[package]
name = "js_ok_zksync_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
franklin_crypto = {package = "franklin-crypto",git="https://github.com/okx/franklin-crypto.git",branch="beta" , features = ["multicore", "plonk"]}
recursive_aggregation_circuit = { package = "recursive_aggregation_circuit", version = "1.0.0", git = "https://github.com/matter-labs/recursive_aggregation_circuit.git", branch="master"}
rand = "0.4"
rescue_poseidon = { package = "rescue_poseidon", version = "0.3.0", git = "https://github.com/matter-labs/rescue-poseidon.git", branch="stable"}

num = { version = "0.4.0", features = ["serde"] }
ethabi = "16.0.0"

serde = "1.0"
thiserror = "1.0"
lazy_static = "1.2.0"
fnv = "1.0.3"
rayon = "1.0.3"
hex = "0.4"
base64 = "0.13"
bincode = "2.0.0-rc.1"
ff_ce = "0.12.0"
bit-vec = "0.6.3"

[dev-dependencies]
serde_json = "1.0"