[package]
name = "zkdex-python-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zkdex_python_sdk"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
zkdex-sdk = {path = "../rust-sdk"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
