
[package]
name = "zkdex-sdk"
version = "1.0.0"
edition = "2018"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync"
license = "Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
publish = false # This library is not published stand-alone, it is bundled with `zksync.js`.
resolver = "2"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
zkdex_wasm = {package = "zkdex_wasm",path = "../../zkdex-wasm-poc/core/lib/zkdex", features=["common"]}
zkdex_utils = {package = "utils",path = "../../zkdex-wasm-poc/core/lib/utils", features=["common"]}
num = { version = "0.4.0", features = ["serde"] }
bigdecimal = { version = "=0.3.0", features = ["serde"]}
hex = "0.4.3"
num-bigint = "0.4.3"
num-traits = "0.2.15"
serde = { version = "1.0.158", features = ["derive"] }
time = "0.3.20"
anyhow = "1.0"
bitvec = "1.0.1"
futures = "0.3"
reqwest = "0.11.16"
serde_json = "1.0.94"
rust-crypto = "0.2"
primitive-types = "0.12.1"
once_cell = "1.17.1"

pairing_ce="0.24.2"
franklin_crypto = {package = "franklin-crypto",git="https://github.com/okx/franklin-crypto.git",branch="beta" , features = ["multicore", "plonk"]}
thiserror = "1.0.38"
lazy_static = "1.2.0"
zkwasm-rust-sdk = { git = "https://github.com/DelphinusLab/zkWasm-rust.git" }
rand = "0.4"

ethers = "2.0.2"
sha3 = "0.10.8"
ethers-core = {version = "2.0.4", features = ["legacy"]}

mio = "0.7.12"
ff = {version = "0.12.1", default-features = false}
wasm-bindgen="=0.2.87"

sha2 = "0.8"
halo2_proofs = { git = "https://github.com/junyu0312/halo2", branch = "gpu", default-features = true }



console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
#executor={path="/Users/lvcong/rust/zkdex/core/lib/executor"}
getrandom = {version="0.2",features=["js"]}
static_assertions = "1.1.0"
poseidon = { git = "https://github.com/lanbones/poseidon" }

jni = {version = '0.21.1'}


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[target.x86_64-apple-darwin]
linker = "x86_64-apple-darwin21.0.0-clang"

[target.aarch64-apple-darwin]
linker = "aarch64-apple-darwin21.0.0-clang"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"
[package.metadata.cross.target.x86_64-unknown-linux-gnu]
xargo = false
image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main-centos"
runner = "custom-runner"
