
[package]
name = "zkdex-sdk"
version = "1.0.0"
edition = "2018"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
keywords = ["blockchain"]
categories = ["cryptography"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
zkdex_wasm = {package = "zkdex_wasm",path = "../../zkdex-wasm-poc/core/lib/zkdex", features=["sdk"]}
zkdex_utils = {package = "utils",path = "../../zkdex-wasm-poc/core/lib/utils", features=["sdk"]}
hex = "0.4.0"
serde = { version = "1.0.158", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0.94"
primitive-types = "0.12.1"

pairing_ce="0.24.2"
franklin_crypto = {package = "franklin-crypto",git="https://github.com/okx/franklin-crypto.git",branch="beta" , features = ["multicore", "plonk"]}

lazy_static = "1.2.0"

ff = {version = "0.12.1", default-features = false}
wasm-bindgen="=0.2.87"
sha2 = "0.8"
console_error_panic_hook = { version = "0.1.6", optional = true }
jni = {version = '0.21.1'}


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[target.x86_64-apple-darwin]
linker = "x86_64-apple-darwin21.0.0-clang"

[target.aarch64-apple-darwin]
linker = "aarch64-apple-darwin21.0.0-clang"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"
[package.metadata.cross.target.x86_64-unknown-linux-gnu]
xargo = false
image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main-centos"
runner = "custom-runner"
pre-build="./pre-build.sh"
