
[package]
name = "zkdex-sdk"
version = "0.1.1"
edition = "2018"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync"
license = "Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
publish = false # This library is not published stand-alone, it is bundled with `zksync.js`.
resolver = "2"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
franklin_crypto = {package = "franklin-crypto",git="https://github.com/okx/franklin-crypto.git",branch="beta" , features = ["multicore", "plonk"]}
rand = "0.4"
mio = "0.7.12"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93" }
ff = {version = "0.12.1", default-features = false}
wasm-bindgen={version ="=0.2.87", optional = true}
hex = "0.4"
sha2 = "0.8"
halo2_proofs = { git = "https://github.com/junyu0312/halo2", branch = "gpu", default-features = true }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }
bitvec = "1.0.1"
num-bigint = "0.4.0"
pairing_ce="0.24.2"
#executor={path="/Users/lvcong/rust/zkdex/core/lib/executor"}
getrandom = {version="0.2",features=["js"]}
num = { version = "0.4.0", features = ["serde"] }
lazy_static = "1.2.0"
once_cell = "1.17.1"
num-traits = "0.2.15"
time = { version = "0.3.20", features = ["std", "serde"] }
primitive-types = "0.12.1"
thiserror = "1.0.38"
anyhow = "1.0"
bigdecimal = { version = "=0.3.0", features = ["serde"]}
static_assertions = "1.1.0"
poseidon = { git = "https://github.com/lanbones/poseidon" }

jni = {version = '0.21.1', optional = true}
[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
default = []
js = ["wasm-bindgen","console_error_panic_hook"]
java = ["jni"]

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
xargo = false
image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main-centos"
runner = "custom-runner"
