[package]
name = "js_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num-bigint = { version = "0.4.0", features = ["serde"] }
num-traits = "0.2.8"
primitive-types = "0.12.1"
thiserror = "1.0.38"
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="beta"}
log = "0.4.17"
once_cell = "1.17.1"
anyhow = "1.0.69"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93" }
serde_with = "2.2.0"
starknet-crypto = { version = "0.4.1" }
sha2 = "0.10.6"
hex = "0.4.3"
rmp-serde = "1.1.1"
time = { version = "0.3.20", features = ["std", "serde"] }
ff_ce = "0.12.0"
lazy_static = "1.2.0"

js_ok_zksync_crypto={path="../ok_zksync_crypto"}
